--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-
-
 <html>
     <head>
       <meta charset='utf-8'>
-      <title>タイトル</title>
+      <title>hidenaga</title>
     </head>
     <body>
       <!-- ここに書きたい内容を書く -->
       aaaaaa
-      
+
     </body>
   </html>
